# generated 2004/3/15 11:10:58 CET by jacek@jaceksdell.(none)
# using glademm V2.0.0b
#
# newer (non customized) versions of this file go to Makefile.am_new
bin_PROGRAMS = mpc_agent

mpc_agent_SOURCES = \
	mpc_agent.cc\
	mpc_agent_glade.cc \
	mpc_agent.cc 

noinst_HEADERS = \
	mpc_agent_glade.hh \
	mpc_agent.hh 

AM_CXXFLAGS = @GTKMM_CFLAGS@ 

mpc_agent_LDADD = @LIBS@ @GTKMM_LIBS@ 
