# generated 2004/5/7 15:30:30 CEST by jacek@jaceksdell.(none)
# using glademm V2.0.0b
#
# newer (non customized) versions of this file go to Makefile.am_new
bin_PROGRAMS = manuproc_starter

manuproc_starter_SOURCES = \
	manuproc_starter.cc\
	ManuProc_Starter_glade.cc \
	ManuProc_Starter.cc 

noinst_HEADERS = \
	ManuProc_Starter_glade.hh \
	ManuProc_Starter.hh 

AM_CXXFLAGS = @GTKMM_CFLAGS@  @KOMPONENTEN_INCLUDES@

LDFLAGS= @KOMPONENTEN_LDFLAGS@

manuproc_starter_LDADD = @KOMPONENTEN_LIBS@ @LIBS@ @GTKMM_LIBS@ 
