# $Id: configure.in,v 1.18 2002/07/08 12:42:38 christof Exp $

AC_INIT(src/SQLerror.h)
AC_CONFIG_AUX_DIR(.)

AM_INIT_AUTOMAKE(ManuProC_Base, 0.5.1, nomacros)
AM_CONFIG_HEADER(src/ManuProCConfig.h)

AC_PREFIX_DEFAULT(/usr/local)

AC_PROG_CXX
AM_PROG_LIBTOOL
AC_LANG_CPLUSPLUS

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(CXXFLAGS)

AM_PATH_SIGC(1.0.0,,AC_MSG_ERROR("SigC++ 1.0.0 or newer not found or broken - see config.log for details."))

if test "${with_postgresdir}" != "no"
then
 ECPG=`which ecpg`
 if test "${with_postgresdir+set}" = "set" -o ! -z "$ECPG"
 then
  PETIG_CHECK_POSTGRES
  AC_MSG_CHECKING(for standard database name)
  DEFAULT_DB="$USER"
  DEFAULT_DBHOST="localhost"
  AC_DEFINE_UNQUOTED(DEFAULT_DB, "$DEFAULT_DB" )
  AC_DEFINE_UNQUOTED(DEFAULT_DBHOST, "$DEFAULT_DBHOST" )
  AC_MSG_RESULT($DEFAULT_DB@$DEFAULT_DBHOST)

  LIBS="$LIBS @ECPG_LIBS@"
 fi
fi

AM_CONDITIONAL(DATABASE, test \! -z "$ECPG_INCLUDES" )

AC_OUTPUT(Makefile src/Makefile examples/Makefile)
