# $Id: configure.in,v 1.27 2004/03/08 15:34:15 christof Exp $

AC_PREREQ(2.50)
AC_INIT(ManuProC_Base,0.6.3, [manuproc-developer-de@berlios.de])
AC_CONFIG_AUX_DIR(.)

MPC_BASE_MAJOR_VERSION=`echo $PACKAGE_VERSION | sed -e 's/^\(.*\)\..*\..*$/\1/'`
MPC_BASE_MINOR_VERSION=`echo $PACKAGE_VERSION | sed -e 's/^.*\.\(.*\)\..*$/\1/'`
MPC_BASE_MICRO_VERSION=`echo $PACKAGE_VERSION | sed -e 's/^.*\..*\.\(.*\)$/\1/'`
AC_SUBST(MPC_BASE_MAJOR_VERSION)
AC_SUBST(MPC_BASE_MINOR_VERSION)
AC_SUBST(MPC_BASE_MICRO_VERSION)

AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS(config.h src/ManuProCConfig.h)
AC_PREFIX_DEFAULT(/usr/local)

AC_PROG_CXX
AM_PROG_LIBTOOL
AC_LANG_CPLUSPLUS

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(CXXFLAGS)

AC_ARG_ENABLE(sigc1-0, [  --enable-sigc1-0	prefer sigc 1.0],
	[AM_PATH_SIGC(1.0.0,,AC_MSG_ERROR("SigC++ 1.0.0 or newer not found or broken - see config.log for details."))],
	[PKG_CHECK_MODULES(SIGC,[sigc++-1.2 >= 1.2.0],[
		AC_SUBST(SIGC_CFLAGS)
		AC_SUBST(SIGC_LIBS)
#		CXXFLAGS="$CXXFLAGS -DSIGC1_2"
#		AC_SUBST(CXXFLAGS)
		AC_DEFINE(SIGC1_2,1,[we use SigC++ 1.2.x (not 1.0.x)])
	 ],[
		AM_PATH_SIGC(1.0.0,,AC_MSG_ERROR("SigC++ 1.0.0 or newer not found or broken - see config.log for details."))
	 ]) 
	])

if test "${with_postgresdir}" != "no"
then
 ECPG=`which ecpg`
 if test "${with_postgresdir+set}" = "set" -o ! -z "$ECPG"
 then
  PETIG_CHECK_POSTGRES
  
  AC_MSG_CHECKING(for ecpg version)
  tmp_CXXFLAGS="$CXXFLAGS"
  CXXFLAGS="$CXXFLAGS $ECPG_INCLUDES"
  AC_COMPILE_IFELSE([
#include <ecpgtype.h>
#include <ecpglib.h>
int main() {  ECPGdo(20, "test", "select true",ECPGt_EOIT, ECPGt_EORT); }
	],[AC_DEFINE(OLD_ECPG, 1, [Define to 1 if you use ecpg 2.9.])
		AC_MSG_RESULT([old (-2.9.0)])],
	[AC_MSG_RESULT([new (3.0.0+)])])
  CXXFLAGS="$tmp_CXXFLAGS"
  
  AC_MSG_CHECKING(for standard database name)
  DEFAULT_DB="$USER"
  DEFAULT_DBHOST="localhost"
  AC_DEFINE_UNQUOTED(DEFAULT_DB, "$DEFAULT_DB" )
  AC_DEFINE_UNQUOTED(DEFAULT_DBHOST, "$DEFAULT_DBHOST" )
  AC_MSG_RESULT($DEFAULT_DB@$DEFAULT_DBHOST)

  LIBS="$LIBS @ECPG_LIBS@"
 fi
fi

AM_CONDITIONAL(DATABASE, test \! -z "$ECPG_INCLUDES" )

if echo __MINGW32__ | $CPP - - | fgrep -q __MINGW32__
then mingw=false
else mingw=true 
fi
AM_CONDITIONAL(WINDOWS, test x$mingw = xtrue)

AC_OUTPUT(Makefile src/Makefile examples/Makefile src/libManuProC_Base.rc)
